# discourse-rs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  index.html  openapi.json  shell.nix  test_jobs.sh  test_pagination.sh
.github/workflows/: docs.yml  test.yml
migrations/2025-12-03-234457_create_users/: up.sql
migrations/2025-12-03-234509_create_categories/: up.sql
migrations/2025-12-03-234510_create_topics/: up.sql
migrations/2025-12-03-234511_create_posts/: up.sql
migrations/2025-12-05-015034_create_site_settings/: down.sql  up.sql
migrations/2025-12-05-031835_create_backie_jobs/: down.sql  up.sql
migrations/2025-12-05-144156_add_moderation_system/: down.sql  up.sql
migrations/2026-01-19-200000_create_notifications/: up.sql
migrations/2026-06-04-103738_create_post_likes/: down.sql  up.sql
migrations/2026-06-06-173446-0000_create_user_stats/: down.sql  up.sql
migrations/2026-06-06-184201-0000_create_topic_views/: down.sql  up.sql
nix/: postgres.nix
scripts/: seed_test_data.sh
src/: auth.rs  config.rs  guardian.rs  jobs.rs  lib.rs  main.rs  markdown.rs  middleware.rs  models.rs  moderation.rs  openapi.rs  pagination.rs  route_helpers.rs  routes.rs  schema.rs
src/models/: category.rs  notification.rs  post.rs  post_like.rs  site_setting.rs  topic.rs  topic_view.rs  user.rs  user_stat.rs
src/routes/: auth.rs  categories.rs  jobs.rs  likes.rs  moderation.rs  notifications.rs  posts.rs  reads.rs  (+4 more)
tests/: likes_route_test.rs  likes_test.rs  reads_test.rs  route_auth_test.rs  setup_test.rs  trust_levels_test.rs  user_stats_test.rs
(+6 files in other folders)
