[package]
name = "discourse-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.19", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17"
env_logger = "0.11"
log = "0.4"
