[package]
name = "discourse-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
futures = "0.3"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.19", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17"
jsonwebtoken = "9"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
md5 = "0.7"
uuid = { version = "1", features = ["serde", "v4"] }
actix-governor = "0.8"
comrak = { version = "0.31", default-features = false, features = ["syntect"] }
